--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,16 +6,17 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/userroletest
+    url: ${JAWSDB_URL:jdbc:mysql://127.0.0.1:3306/userroletest}
     username: root
     password: root
-    validationQuery: SELECT 1
-    testWhileIdle: true
+    tomcat:      validation-query: SELECT 1      test-while-idle: true
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
-      naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
